kubernetes/addons/DockerRegistry/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  namespace: kube-system
  labels:
    app: registry
spec:
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: image-store
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
      volumes:
      - name: image-store
        persistentVolumeClaim:
          claimName: registry
