kubernetes/addons/DockerRegistry/service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: kube-system
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
